# network_asio_experience

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
first_http_request_asio_example/: CMakeLists.txt  simple_asio_example.cpp
net_common/: CMakeLists.txt
net_common/include/net_common/: net_client.h  net_connection.h  net_message.h  net_server.h  net_thread_safe_queue.h
simple_asio_example/: CMakeLists.txt  simple_asio_example.cpp
simple_client/: CMakeLists.txt  sdl_RAII.h  simple_client.cpp
simple_common/: CMakeLists.txt
simple_common/include/simple_common/: custom_msg_type.h  settings.h
simple_server/: CMakeLists.txt  simple_server.cpp
src/: asio_example.cpp  asio_example.h  main.cpp  net_client.h  net_connection.h  net_message.h  net_thread_safe_queue.h  simple_client.cpp  simple_client.h
